--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
+* {
+  font-family: "Abyssinica SIL", serif;
+}
+
 body {
+  background-color: black;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  height: 100vh;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: sans-serif;
+}
+.musicpage {
+  font-weight: bold;
+  font-size: 30px;
+  color: red;
 }
