--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
 .App {
-  background-color:#FFF0F5;
-  height: 100vh;
+  background-color: #fff0f5;
+  height: 100%;
   width: 100%;
   border-radius: 10px;
 }
-.header{
+.header {
   font-size: 70px;
   color: #d648d7;
 }
+/* make the music list and form side by side */
+.audioCard {
+  height: 100px;
+  box-sizing: border-box;
+  width: 100%;
+  border: 4px solid lime;
+  overflow: hidden;
+  white-space: nowrap;
+  display: inline-flex;
+  justify-content: space-evenly;
+}
+
