--- a/src/App.css
+++ b/src/App.css
@@ -81,11 +81,58 @@ nav {
   height: 100px;
   box-sizing: border-box;
   width: 100%;
-  border: 4px solid lime;
-  overflow: hidden;
-  white-space: nowrap;
+  border: 1px solid rgb(74, 12, 109);
   display: inline-flex;
   justify-content: space-evenly;
+  margin: 2px;
+  padding: 0px 0px 20px 0px;
+}
+
+.audioCard img {
+  border-radius: 10px;
+}
+@media all and (max-width: 480px) {
+  .audioCard {
+    background-image: url("../public/data/images/wallpaperflare.com_wallpaper.jpg");
+    padding: 15px 0px 5px 0px;
+  }
+}
+@media all and (max-width: 480px) {
+  .audioCard img {
+    height: 70px;
+    width: 70px;
+    border-radius: 4px;
+  }
+}
+
+.audioCard audio {
+  width: 50%;
+  position: relative;
+  top: 20px;
+  background-color: rgba(0, 0, 0, 0);
+}
+@media all and (max-width: 480px) {
+  .audioCard audio {
+    height: 25%;
+    width: 55%;
+    padding: 0px;
+  }
+}
+.audioCard h6 {
+  width: 10%;
+  font-size: 13px;
+  line-height: 18px;
+  color: white;
+}
+@media all and (max-width: 480px) {
+  .audioCard h6 {
+    position: relative;
+    width: 10%;
+    line-height: px;
+    top: -6px;
+    overflow-wrap: break-word;
+    overflow-y: hidden;
+  }
 /* add background image to home div */
 .home {
   background-image: url("../public/data/images/home.jpg");
