--- a/src/App.css
+++ b/src/App.css
@@ -172,4 +172,29 @@ input {
   position: relative;
   top: 100px;
 }
+/* add style to about */
+.about {
+  background-image: url("../public/data/images/about.jpg");
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  box-sizing: border-box;
+  text-align: center;
+  padding: 20px;
+}
+@media all and (max-width: 480px) {
+  .home {
+    background-size: 125% 105%;
+  }
+}
+.about:after {
+  content: "";
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.2);
+  pointer-events: none;
+}
 
